fixed backgrond color of invalid form input in dark mode. ApplyIf in MultiSelectGrid.js made value in SelectCountry.js settable when used

--- a/www/views/Extjs3/themes/Dark/src/_overrides.scss
+++ b/www/views/Extjs3/themes/Dark/src/_overrides.scss
@@ -13,3 +13,10 @@ body {
     border-bottom: 0;
   }
 }
+
+.x-form{
+  &-invalid, textarea.x-form-invalid {
+    border-color: rgba(color($red, 700),0.54);
+    background-color: color($bg, 'box');
+  }
+}
